Fix mobile header overflow with buttons

--- a/src/ui/components/Widgets/Chart/components/WidgetHeader.scss
+++ b/src/ui/components/Widgets/Chart/components/WidgetHeader.scss
@@ -136,5 +136,13 @@
             overflow: hidden;
             white-space: nowrap;
         }
+
+        &#{$class}_btns-full #{$class}__mobile-title {
+            padding-right: 94px;
+        }
+
+        &#{$class}_btns-partly #{$class}__mobile-title {
+            padding-right: 67px;
+        }
     }
 }
